services/tdarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: services
spec:
  selector:
    app: tdarr
  ports:
    - name: tdarr-ui
      protocol: TCP
      port: 8265
      targetPort: 8265
    - name: tdarr-server
      protocol: TCP
      port: 8266
      targetPort: 8266
