services/tdarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.local.hohepa.dev`)
      kind: Rule
      services:
        - name: tdarr
          port: 8265
    - match: Host(`tdarr-server.local.hohepa.dev`)
      kind: Rule
      services:
        - name: tdarr
          port: 8266
  tls:
    secretName: local-hohepa-dev-tls
